2010-10-24  Julien Danjou  <julien@danjou.info>

	* erc-backend.el (erc-server-JOIN): Set the correct target list on join.

	* erc-backend.el (erc-process-sentinel): Check that buffer is alive
	before setting it as current buffer.

2010-10-14  Juanma Barranquero  <lekktu@gmail.com>

	* erc-xdcc.el (erc-xdcc-help-text): Fix typo in docstring.

2010-10-10  Dan Nicolaescu  <dann@ics.uci.edu>

	* erc-list.el (erc-list-menu-mode-map): Declare and define in one step.

2010-08-14  Vivek Dasmohapatra  <vivek@etla.org>

	* erc-join.el (erc-autojoin-timing, erc-autojoin-delay): New vars.
	(erc-autojoin-channels-delayed, erc-autojoin-after-ident): New
	functions.
	(erc-autojoin-channels): Allow autojoining after ident (Bug#5521).

2010-08-08  Fran Litterio  <flitterio@gmail.com>

	* erc-backend.el (erc-server-filter-function): Call
	erc-log-irc-protocol.

	* erc.el (erc-toggle-debug-irc-protocol): Bind
	erc-toggle-debug-irc-protocol to t.

2010-05-07  Chong Yidong  <cyd@stupidchicken.com>

	* Version 23.2 released.

2010-03-10  Chong Yidong  <cyd@stupidchicken.com>

	* Branch for 23.2.

2010-02-07  Vivek Dasmohapatra  <vivek@etla.org>

	* erc-services.el (erc-nickserv-alist): Fix defcustom type (Bug#5520).

2010-01-25  Vivek Dasmohapatra  <vivek@etla.org>

	* erc-backend.el (erc-session-connector): New var.
	(erc-server-reconnect): Use it to reconnect via old
	connector (Bug#4958).

	* erc.el (erc-determine-parameters):
	Save erc-server-connect-function to erc-session-connector.

2009-11-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* erc.el (erc-display-line-1, erc-process-away):
	* erc-truncate.el (erc-truncate-buffer-to-size):
	Use with-current-buffer.

2009-10-24  Glenn Morris  <rgm@gnu.org>

	* erc-dcc.el (pcomplete-erc-all-nicks):
	* erc-notify.el (pcomplete-erc-all-nicks):
	Autoload it, to silence compiler.

	* erc-dcc.el (pcomplete/erc-mode/DCC): Replace cl-function
	remove-duplicates with erc-delete-dups.

2009-09-27  Johan Bockgård  <bojohan@gnu.org>
